# pain-coach-ai

./: .env.example  .gitignore  LICENSE-COMMERCIAL.md  README.md  package.json  pain_coach_detailed_design.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/middleware/: auth.py  monitoring.py  rate_limiting.py
api/routes/: __init__.py  admin.py  ai_chat.py  analytics.py  auth.py  health_integrations.py  pain_records.py
core/ai/: __init__.py  mlx_engine.py  pain_lora.py
core/audio/: __init__.py  speech_processor.py  tts_engine.py
core/data/: __init__.py  database.py  models.py  schemas.py
core/integrations/: __init__.py  health_manager.py  providers.py  sync_scheduler.py
core/performance/: __init__.py  m3_optimizer.py  monitoring.py  profiler.py
core/privacy/: __init__.py  audit_logger.py  encryption_manager.py  gdpr_compliance.py
frontend/src/: App.vue  main.js  style.css
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  painLog.js
frontend/src/views/: Dashboard.vue  Login.vue
